prusti/tests/verify/fail/no-annotations/assert-false.rs
extern crate prusti_contracts;

fn main() {
    assert!(false);  //~ ERROR assert!(..) statement might not hold
}
